# AI_Translator_Plugin

./: CMakeLists.txt  Plugin_VST3.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Plugin_VST3.vst3/Contents/Resources/: moduleinfo.json
Plugin_VST3.vst3/Contents/x86_64-win/: Plugin_VST3.vst3
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WhisperThread.cpp  WhisperThread.h
Source/dsp/: LockFreeRingBuffer.h  Resample16k.h
Source/engine/: MessageBus.h  Pipeline.cpp  Pipeline.h  WhisperEngine.cpp  WhisperEngine.h
Source/translate/: GoogleTranslator.cpp  GoogleTranslator.h  ITranslator.h  PassThroughTranslator.h
Source/tts/: AzureTTs.cpp  AzureTTs.h  BeepTts.h  ITts.h
Source/ui/: Languages.h
